--- a/Ansible/playbooks/node-exporter-cadvisor-installation.yml
+++ b/Ansible/playbooks/node-exporter-cadvisor-installation.yml
@@ -4,7 +4,7 @@
   become: yes
   vars:
     docker_compose_dir: /opt/monitoring
-    docker_compose_file: ../Webservers/node-exporter-cadvisor-installation.yml
+    docker_compose_file: ../../Webservers/node-exporter-cadvisor-installation.yml 
     remote_compose_path: /opt/monitoring/docker-compose.yml
 
   tasks:
