--- a/Monitoring/docker-compose.yml
+++ b/Monitoring/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     restart: unless-stopped
     volumes:
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./prometheus/rules.yml:/etc/prometheus/rules.yml
       - prometheus_data:/prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
@@ -18,6 +19,19 @@ services:
       - '--web.enable-lifecycle'
     ports:
       - 9090:9090
+    networks:
+      - monitoring
+
+
+  alertmanager:
+    image: quay.io/prometheus/alertmanager:latest
+    container_name: alertmanager
+    ports:
+      - "9093:9093"
+    restart: unless-stopped
+    volumes:
+      - ./alertmanager/alertmanager.yml:etc/alertmanager/alertmanager.yml
+      - alertmanager_data:/data
     networks:
       - monitoring
 
