--- a/Ansible/ansible.cfg
+++ b/Ansible/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = inventory/inventory.ini
+inventory = inventory/aws_ec2.yml
 remote_user = ubuntu
 private_key_file = /home/ubuntu/DevOps-Project/deployer_key
 host_key_checking = False
