Fix terraform init EOF error by adding -migrate-state and -input=false flags

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -186,7 +186,7 @@ jobs:
         run: |
           echo "::group::Terraform Initialization"
           cd Terraform
-          terraform init
+          terraform init -migrate-state -input=false
           echo "::endgroup::"
       
       - name: 🏗️ Phase 1 - Terraform Validate
