--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -117,14 +117,87 @@ jobs:
           
           echo "Checking if backend infrastructure exists..."
           
-          # Check if S3 bucket exists
+          # Get AWS Account ID
           ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
           BUCKET_NAME="devops-project-terraform-state-$ACCOUNT_ID"
+          TABLE_NAME="terraform-state-locks"
+          KEY_NAME="deployer-key"
           
-          if aws s3 ls "s3://$BUCKET_NAME" 2>/dev/null; then
-            echo "✅ S3 bucket already exists: $BUCKET_NAME"
+          # Check if resources exist in AWS
+          BUCKET_EXISTS=$(aws s3 ls "s3://$BUCKET_NAME" 2>/dev/null && echo "true" || echo "false")
+          TABLE_EXISTS=$(aws dynamodb describe-table --table-name $TABLE_NAME 2>/dev/null && echo "true" || echo "false")
+          KEY_EXISTS=$(aws ec2 describe-key-pairs --key-names $KEY_NAME 2>/dev/null && echo "true" || echo "false")
+          
+          echo "📋 Resource Status:"
+          echo "   S3 Bucket: $BUCKET_EXISTS"
+          echo "   DynamoDB Table: $TABLE_EXISTS"
+          echo "   EC2 Key Pair: $KEY_EXISTS"
+          
+          # If any resources exist, we need to import them first
+          if [ "$BUCKET_EXISTS" = "true" ] || [ "$TABLE_EXISTS" = "true" ] || [ "$KEY_EXISTS" = "true" ]; then
+            echo ""
+            echo "📥 Importing existing resources into Terraform state..."
+            
+            # Create a temporary provider.tf without backend for initial import
+            cat > provider_temp.tf << 'EOF'
+          terraform {
+            required_providers {
+              aws = {
+                source  = "hashicorp/aws"
+              }
+            }
+          }
+
+          provider "aws" {
+            region = "us-east-1"
+          }
+          EOF
+            
+            # Backup original provider.tf and use temporary one
+            mv provider.tf provider.tf.backup
+            mv provider_temp.tf provider.tf
+            
+            # Initialize without backend
+            terraform init
+            
+            # Import S3 bucket if it exists
+            if [ "$BUCKET_EXISTS" = "true" ]; then
+              echo "📦 Importing S3 bucket..."
+              terraform import aws_s3_bucket.terraform_state $BUCKET_NAME 2>/dev/null || echo "   (already in state or import failed)"
+            fi
+            
+            # Import DynamoDB table if it exists
+            if [ "$TABLE_EXISTS" = "true" ]; then
+              echo "📊 Importing DynamoDB table..."
+              terraform import aws_dynamodb_table.terraform_locks $TABLE_NAME 2>/dev/null || echo "   (already in state or import failed)"
+            fi
+            
+            # Import EC2 key pair if it exists
+            if [ "$KEY_EXISTS" = "true" ]; then
+              echo "🔑 Importing EC2 key pair..."
+              terraform import aws_key_pair.deployer $KEY_NAME 2>/dev/null || echo "   (already in state or import failed)"
+            fi
+            
+            # Apply to ensure all backend resources exist and are configured correctly
+            echo ""
+            echo "🔧 Ensuring backend infrastructure is complete..."
+            terraform apply \
+              -target=aws_s3_bucket.terraform_state \
+              -target=aws_s3_bucket_versioning.terraform_state \
+              -target=aws_s3_bucket_server_side_encryption_configuration.terraform_state \
+              -target=aws_s3_bucket_public_access_block.terraform_state \
+              -target=aws_dynamodb_table.terraform_locks \
+              -target=data.aws_caller_identity.current \
+              -var="ssh_public_key=${{ secrets.SSH_PUBLIC_KEY }}" \
+              -auto-approve
+            
+            # Restore original provider.tf with backend
+            mv provider.tf.backup provider.tf
+            
+            echo "✅ Existing resources imported and backend infrastructure verified"
           else
-            echo "📦 Creating backend infrastructure..."
+            echo ""
+            echo "📦 Creating new backend infrastructure..."
             
             # Create a temporary provider.tf without backend
             cat > provider_temp.tf << 'EOF'
