--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -163,19 +163,37 @@ jobs:
             # Import S3 bucket if it exists
             if [ "$BUCKET_EXISTS" = "true" ]; then
               echo "📦 Importing S3 bucket..."
-              terraform import aws_s3_bucket.terraform_state $BUCKET_NAME 2>/dev/null || echo "   (already in state or import failed)"
+              terraform import aws_s3_bucket.terraform_state $BUCKET_NAME || {
+                echo "⚠️  Import failed, checking if already in state..."
+                terraform state show aws_s3_bucket.terraform_state >/dev/null 2>&1 || {
+                  echo "❌ Resource not in state and import failed"
+                  exit 1
+                }
+              }
             fi
             
             # Import DynamoDB table if it exists
             if [ "$TABLE_EXISTS" = "true" ]; then
               echo "📊 Importing DynamoDB table..."
-              terraform import aws_dynamodb_table.terraform_locks $TABLE_NAME 2>/dev/null || echo "   (already in state or import failed)"
+              terraform import aws_dynamodb_table.terraform_locks $TABLE_NAME || {
+                echo "⚠️  Import failed, checking if already in state..."
+                terraform state show aws_dynamodb_table.terraform_locks >/dev/null 2>&1 || {
+                  echo "❌ Resource not in state and import failed"
+                  exit 1
+                }
+              }
             fi
             
             # Import EC2 key pair if it exists
             if [ "$KEY_EXISTS" = "true" ]; then
               echo "🔑 Importing EC2 key pair..."
-              terraform import aws_key_pair.deployer $KEY_NAME 2>/dev/null || echo "   (already in state or import failed)"
+              terraform import aws_key_pair.deployer $KEY_NAME || {
+                echo "⚠️  Import failed, checking if already in state..."
+                terraform state show aws_key_pair.deployer >/dev/null 2>&1 || {
+                  echo "❌ Resource not in state and import failed"
+                  exit 1
+                }
+              }
             fi
             
             # Apply to ensure all backend resources exist and are configured correctly
