fix: Restore provider.tf AFTER apply completes
CRITICAL FIX:
- Moved provider.tf restoration to happen AFTER terraform apply
- Previously: imports saved to local state, then switched to S3 backend (empty)
- Now: imports saved to local state, apply uses local state, then switch to S3
- This ensures imported resources are actually applied before backend switch

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -209,10 +209,10 @@ jobs:
               -var="ssh_public_key=${{ secrets.SSH_PUBLIC_KEY }}" \
               -auto-approve
             
-            # Restore original provider.tf with backend
-            mv provider.tf.backup provider.tf
-            
             echo "✅ Existing resources imported and backend infrastructure verified"
+            
+            # Restore original provider.tf with backend (AFTER apply completes)
+            mv provider.tf.backup provider.tf
           else
             echo ""
             echo "📦 Creating new backend infrastructure..."
