--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -110,150 +110,97 @@ jobs:
           terraform_version: ${{ env.TERRAFORM_VERSION }}
           terraform_wrapper: false  # Required for output parsing
       
-      - name: 🗄️ Phase 1 - Create Backend Infrastructure
+      - name: 🗄️ Phase 1 - Ensure Backend Infrastructure Exists
         run: |
           echo "::group::Backend Infrastructure Setup"
-          cd Terraform
-          
-          echo "Checking if backend infrastructure exists..."
           
           # Get AWS Account ID
           ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
           BUCKET_NAME="devops-project-terraform-state-$ACCOUNT_ID"
           TABLE_NAME="terraform-state-locks"
-          KEY_NAME="deployer-key"
           
-          # Check if resources exist in AWS
-          BUCKET_EXISTS=$(aws s3 ls "s3://$BUCKET_NAME" 2>/dev/null && echo "true" || echo "false")
-          TABLE_EXISTS=$(aws dynamodb describe-table --table-name $TABLE_NAME 2>/dev/null && echo "true" || echo "false")
-          KEY_EXISTS=$(aws ec2 describe-key-pairs --key-names $KEY_NAME 2>/dev/null && echo "true" || echo "false")
+          echo "📋 Target backend resources:"
+          echo "   S3 Bucket: $BUCKET_NAME"
+          echo "   DynamoDB Table: $TABLE_NAME"
+          echo ""
           
-          echo "📋 Resource Status:"
-          echo "   S3 Bucket: $BUCKET_EXISTS"
-          echo "   DynamoDB Table: $TABLE_EXISTS"
-          echo "   EC2 Key Pair: $KEY_EXISTS"
-          
-          # If any resources exist, we need to import them first
-          if [ "$BUCKET_EXISTS" = "true" ] || [ "$TABLE_EXISTS" = "true" ] || [ "$KEY_EXISTS" = "true" ]; then
-            echo ""
-            echo "📥 Importing existing resources into Terraform state..."
-            
-            # Create a temporary provider.tf without backend for initial import
-            cat > provider_temp.tf << 'EOF'
-          terraform {
-            required_providers {
-              aws = {
-                source  = "hashicorp/aws"
-              }
-            }
-          }
-
-          provider "aws" {
-            region = "us-east-1"
-          }
-          EOF
-            
-            # Backup original provider.tf and use temporary one
-            mv provider.tf provider.tf.backup
-            mv provider_temp.tf provider.tf
-            
-            # Initialize without backend
-            terraform init
-            
-            # Import S3 bucket if it exists
-            if [ "$BUCKET_EXISTS" = "true" ]; then
-              echo "📦 Importing S3 bucket..."
-              terraform import aws_s3_bucket.terraform_state $BUCKET_NAME || {
-                echo "⚠️  Import failed, checking if already in state..."
-                terraform state show aws_s3_bucket.terraform_state >/dev/null 2>&1 || {
-                  echo "❌ Resource not in state and import failed"
-                  exit 1
-                }
-              }
-            fi
-            
-            # Import DynamoDB table if it exists
-            if [ "$TABLE_EXISTS" = "true" ]; then
-              echo "📊 Importing DynamoDB table..."
-              terraform import aws_dynamodb_table.terraform_locks $TABLE_NAME || {
-                echo "⚠️  Import failed, checking if already in state..."
-                terraform state show aws_dynamodb_table.terraform_locks >/dev/null 2>&1 || {
-                  echo "❌ Resource not in state and import failed"
-                  exit 1
-                }
-              }
-            fi
-            
-            # Import EC2 key pair if it exists
-            if [ "$KEY_EXISTS" = "true" ]; then
-              echo "🔑 Importing EC2 key pair..."
-              terraform import aws_key_pair.deployer $KEY_NAME || {
-                echo "⚠️  Import failed, checking if already in state..."
-                terraform state show aws_key_pair.deployer >/dev/null 2>&1 || {
-                  echo "❌ Resource not in state and import failed"
-                  exit 1
-                }
-              }
-            fi
-            
-            # Apply to ensure all backend resources exist and are configured correctly
-            echo ""
-            echo "🔧 Ensuring backend infrastructure is complete..."
-            terraform apply \
-              -target=aws_s3_bucket.terraform_state \
-              -target=aws_s3_bucket_versioning.terraform_state \
-              -target=aws_s3_bucket_server_side_encryption_configuration.terraform_state \
-              -target=aws_s3_bucket_public_access_block.terraform_state \
-              -target=aws_dynamodb_table.terraform_locks \
-              -target=data.aws_caller_identity.current \
-              -var="ssh_public_key=${{ secrets.SSH_PUBLIC_KEY }}" \
-              -auto-approve
-            
-            echo "✅ Existing resources imported and backend infrastructure verified"
-            
-            # Restore original provider.tf with backend (AFTER apply completes)
-            mv provider.tf.backup provider.tf
+          # ============================================
+          # Create S3 Bucket if it doesn't exist
+          # ============================================
+          echo "Checking S3 bucket..."
+          if aws s3 ls "s3://$BUCKET_NAME" 2>/dev/null; then
+            echo "✅ S3 bucket already exists: $BUCKET_NAME"
           else
-            echo ""
-            echo "📦 Creating new backend infrastructure..."
+            echo "📦 Creating S3 bucket: $BUCKET_NAME"
+            aws s3api create-bucket \
+              --bucket "$BUCKET_NAME" \
+              --region us-east-1
             
-            # Create a temporary provider.tf without backend
-            cat > provider_temp.tf << 'EOF'
-          terraform {
-            required_providers {
-              aws = {
-                source  = "hashicorp/aws"
-              }
-            }
-          }
-
-          provider "aws" {
-            region = "us-east-1"
-          }
-          EOF
+            # Enable versioning
+            echo "   Enabling versioning..."
+            aws s3api put-bucket-versioning \
+              --bucket "$BUCKET_NAME" \
+              --versioning-configuration Status=Enabled
             
-            # Backup original provider.tf and use temporary one
-            mv provider.tf provider.tf.backup
-            mv provider_temp.tf provider.tf
+            # Enable encryption
+            echo "   Enabling encryption..."
+            aws s3api put-bucket-encryption \
+              --bucket "$BUCKET_NAME" \
+              --server-side-encryption-configuration '{
+                "Rules": [{
+                  "ApplyServerSideEncryptionByDefault": {
+                    "SSEAlgorithm": "AES256"
+                  }
+                }]
+              }'
             
-            # Initialize and create backend resources
-            terraform init
-            terraform apply \
-              -target=aws_s3_bucket.terraform_state \
-              -target=aws_s3_bucket_versioning.terraform_state \
-              -target=aws_s3_bucket_server_side_encryption_configuration.terraform_state \
-              -target=aws_s3_bucket_public_access_block.terraform_state \
-              -target=aws_dynamodb_table.terraform_locks \
-              -target=data.aws_caller_identity.current \
-              -var="ssh_public_key=${{ secrets.SSH_PUBLIC_KEY }}" \
-              -auto-approve
+            # Block public access
+            echo "   Blocking public access..."
+            aws s3api put-public-access-block \
+              --bucket "$BUCKET_NAME" \
+              --public-access-block-configuration \
+                "BlockPublicAcls=true,IgnorePublicAcls=true,BlockPublicPolicy=true,RestrictPublicBuckets=true"
             
-            # Restore original provider.tf with backend
-            mv provider.tf.backup provider.tf
+            # Add tags
+            echo "   Adding tags..."
+            aws s3api put-bucket-tagging \
+              --bucket "$BUCKET_NAME" \
+              --tagging 'TagSet=[
+                {Key=Name,Value="Terraform State Bucket"},
+                {Key=Environment,Value="Production"},
+                {Key=ManagedBy,Value="GitHub Actions"}
+              ]'
             
-            echo "✅ Backend infrastructure created"
+            echo "✅ S3 bucket created successfully"
           fi
           
+          # ============================================
+          # Create DynamoDB Table if it doesn't exist
+          # ============================================
+          echo ""
+          echo "Checking DynamoDB table..."
+          if aws dynamodb describe-table --table-name "$TABLE_NAME" 2>/dev/null; then
+            echo "✅ DynamoDB table already exists: $TABLE_NAME"
+          else
+            echo "📊 Creating DynamoDB table: $TABLE_NAME"
+            aws dynamodb create-table \
+              --table-name "$TABLE_NAME" \
+              --attribute-definitions AttributeName=LockID,AttributeType=S \
+              --key-schema AttributeName=LockID,KeyType=HASH \
+              --billing-mode PAY_PER_REQUEST \
+              --tags \
+                Key=Name,Value="Terraform State Lock Table" \
+                Key=Environment,Value="Production" \
+                Key=ManagedBy,Value="GitHub Actions"
+            
+            echo "   Waiting for table to be active..."
+            aws dynamodb wait table-exists --table-name "$TABLE_NAME"
+            
+            echo "✅ DynamoDB table created successfully"
+          fi
+          
+          echo ""
+          echo "✅ Backend infrastructure is ready"
           echo "::endgroup::"
       
       - name: 🔓 Phase 1 - Clear Stuck Locks (if any)
