feat: Make Terraform fully idempotent
- Changed EC2 key pair from resource to data source
  - Key pair now managed by GitHub Actions
  - Eliminated InvalidKeyPair.Duplicate errors

- Created backend.tf with import blocks
  - Manages S3 bucket and DynamoDB table for state
  - Import blocks automatically handle existing resources
  - Added lifecycle protection with prevent_destroy

- Removed ssh_public_key variable
  - No longer needed as key pair is managed externally
  - Cleaned up terraform plan/apply commands

- Added VPC lifecycle protection
  - Prevents accidental VPC destruction
  - Ignores automatic AWS tag updates

- Updated GitHub Actions workflow
  - Added EC2 key pair creation step before Terraform
  - Idempotent checks for existing resources
  - Removed variable passing for SSH keys

Result: Deployments are now fully idempotent and safe to run multiple times without errors.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -220,6 +220,28 @@ jobs:
           
           echo "::endgroup::"
       
+      - name: 🔑 Phase 1 - Ensure EC2 Key Pair Exists
+        run: |
+          echo "::group::EC2 Key Pair Setup"
+          
+          KEY_NAME="deployer-key"
+          
+          # Check if key pair exists
+          if aws ec2 describe-key-pairs --key-names "$KEY_NAME" --region $AWS_REGION 2>/dev/null; then
+            echo "✅ Key pair already exists: $KEY_NAME"
+          else
+            echo "📝 Creating key pair: $KEY_NAME"
+            # Import the public key from GitHub secrets
+            aws ec2 import-key-pair \
+              --key-name "$KEY_NAME" \
+              --public-key-material "${{ secrets.SSH_PUBLIC_KEY }}" \
+              --region $AWS_REGION
+            
+            echo "✅ Key pair created successfully"
+          fi
+          
+          echo "::endgroup::"
+      
       - name: 🏗️ Phase 1 - Terraform Init
         run: |
           echo "::group::Terraform Initialization"
@@ -259,15 +281,15 @@ jobs:
         run: |
           echo "::group::Terraform Plan"
           cd Terraform
-          terraform plan \
-            -var="ssh_public_key=${{ secrets.SSH_PUBLIC_KEY }}" \
-            -out=tfplan
+          terraform plan -out=tfplan
           echo "::endgroup::"
       
       - name: 🏗️ Phase 1 - Terraform Apply
         run: |
           echo "::group::Terraform Apply"
           cd Terraform
+          # Import blocks in backend.tf will automatically import existing resources
+          # This makes the deployment idempotent - safe to run multiple times
           terraform apply -auto-approve tfplan
           echo "::endgroup::"
       
