fix: use file:// instead of fileb:// for SSH key import
- AWS CLI with file:// prefix automatically base64-encodes the content
- fileb:// expects already base64-encoded data (was causing format error)
- Pass raw OpenSSH public key format, not manually encoded
- Fixes 'Key is not in valid OpenSSH public key format' error

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -232,13 +232,14 @@ jobs:
           else
             echo "📝 Creating key pair: $KEY_NAME"
             # Import the public key from GitHub secrets
-            # AWS requires the public key to be base64-encoded
-            echo "${{ secrets.SSH_PUBLIC_KEY }}" | base64 -w 0 > /tmp/pubkey.b64
+            # Save the raw OpenSSH public key to a temp file
+            # AWS CLI with file:// prefix will automatically base64-encode it
+            echo "${{ secrets.SSH_PUBLIC_KEY }}" > /tmp/pubkey.pub
             aws ec2 import-key-pair \
               --key-name "$KEY_NAME" \
-              --public-key-material fileb:///tmp/pubkey.b64 \
+              --public-key-material file:///tmp/pubkey.pub \
               --region $AWS_REGION
-            rm -f /tmp/pubkey.b64
+            rm -f /tmp/pubkey.pub
             
             echo "✅ Key pair created successfully"
           fi
