--- a/Ansible/playbooks/setup-monitoring-node.yml
+++ b/Ansible/playbooks/setup-monitoring-node.yml
@@ -6,73 +6,12 @@
   
   tasks:
     # ============================================
-    # Phase 1: Docker Installation
+    # Docker is already installed via install-docker.yml
+    # Starting directly with monitoring directory structure
     # ============================================
-    - name: Install Docker dependencies
-      apt:
-        name:
-          - ca-certificates
-          - curl
-          - gnupg
-          - lsb-release
-        state: present
-        update_cache: yes
-      tags: [docker, setup]
-    
-    - name: Create keyrings directory
-      file:
-        path: /etc/apt/keyrings
-        state: directory
-        mode: '0755'
-      tags: [docker, setup]
-    
-    - name: Add Docker GPG key
-      shell: |
-        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg
-        chmod a+r /etc/apt/keyrings/docker.gpg
-      args:
-        creates: /etc/apt/keyrings/docker.gpg
-      tags: [docker, setup]
-    
-    - name: Add Docker repository
-      shell: |
-        echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
-      args:
-        creates: /etc/apt/sources.list.d/docker.list
-      tags: [docker, setup]
-    
-    - name: Update apt cache after adding Docker repo
-      apt:
-        update_cache: yes
-      tags: [docker, setup]
-    
-    - name: Install Docker
-      apt:
-        name:
-          - docker-ce
-          - docker-ce-cli
-          - containerd.io
-          - docker-buildx-plugin
-          - docker-compose-plugin
-        state: present
-      tags: [docker, setup]
-    
-    - name: Start and enable Docker service
-      systemd:
-        name: docker
-        state: started
-        enabled: true
-      tags: [docker, setup]
-    
-    - name: Add ubuntu user to docker group
-      user:
-        name: ubuntu
-        groups: docker
-        append: yes
-      tags: [docker, setup]
     
     # ============================================
-    # Phase 2: Create Monitoring Directory Structure
+    # Phase 1: Create Monitoring Directory Structure
     # ============================================
     - name: Create monitoring directory
       file:
@@ -116,7 +55,7 @@
       tags: [monitoring, setup]
     
     # ============================================
-    # Phase 3: Copy Monitoring Configurations
+    # Phase 2: Copy Monitoring Configurations
     # ============================================
     - name: Copy docker-compose.yml
       copy:
@@ -204,7 +143,7 @@
       tags: [monitoring, config]
     
     # ============================================
-    # Phase 4: Deploy Monitoring Stack
+    # Phase 3: Deploy Monitoring Stack
     # ============================================
     - name: Start monitoring stack with Docker Compose
       shell: |
