fix: resolve Ansible inventory validation issues
- Changed aws_ec2.yml: tags.Name -> ec2_tags.Name to avoid reserved keyword
- Rewrote validate-inventory.sh: check group membership instead of hostname patterns
- Enhanced deploy.yml: added comprehensive inventory verification with full JSON output

Fixes issue where validation script searched for 'monitoring'/'webserver' in IP addresses
instead of checking actual group membership.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -545,16 +545,35 @@ jobs:
           echo "Testing AWS EC2 dynamic inventory plugin..."
           echo ""
           
-          # Test 1: ansible-inventory --list
+          # Test 1: ansible-inventory --list (comprehensive inventory data)
           echo "1️⃣ Testing ansible-inventory --list..."
           if ansible-inventory -i inventory/aws_ec2.yml --list > /tmp/inventory_list.json; then
             echo "✅ ansible-inventory --list executed successfully"
+            
+            # Display the full inventory JSON for debugging
+            echo ""
+            echo "📋 Full Inventory Output:"
+            cat /tmp/inventory_list.json | jq '.'
+            echo ""
             
             # Check if output contains aws_ec2 group
             if cat /tmp/inventory_list.json | jq -e '.aws_ec2' > /dev/null 2>&1; then
               echo "✅ Found aws_ec2 group in inventory"
             else
               echo "⚠️  Warning: aws_ec2 group not found in inventory (no instances may be running yet)"
+            fi
+            
+            # Check for custom groups (webservers, monitoring)
+            if cat /tmp/inventory_list.json | jq -e '.webservers' > /dev/null 2>&1; then
+              echo "✅ Found webservers group in inventory"
+            else
+              echo "⚠️  Warning: webservers group not found in inventory"
+            fi
+            
+            if cat /tmp/inventory_list.json | jq -e '.monitoring' > /dev/null 2>&1; then
+              echo "✅ Found monitoring group in inventory"
+            else
+              echo "⚠️  Warning: monitoring group not found in inventory"
             fi
           else
             echo "❌ ansible-inventory --list failed"
